--- a/noticia/package.json
+++ b/noticia/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pg": "^8.11.0"
   }
 }
