--- a/login/package.json
+++ b/login/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ubiratanfilho/cormen-ai-solutions#readme",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
