--- a/kubernetes/mss-noticias-deployment.yaml
+++ b/kubernetes/mss-noticias-deployment.yaml
@@ -16,6 +16,10 @@ spec:
     spec:
       containers:
         - name: mss-noticias
-          image: sua-imagem-do-dockerhub
+          image: ubiratanmotta/mss-noticias
           ports:
             - containerPort: 3001
+            # resources:
+            #   limits:
+            #     memory: 256Mi
+            #     cpu: 1
