--- a/flutter/app_flutter_cormenai/pubspec.yaml
+++ b/flutter/app_flutter_cormenai/pubspec.yaml
@@ -28,8 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  postgres: any
+  pointycastle: any
   flutter:
     sdk: flutter
+    
+
 
 
   # The following adds the Cupertino Icons font to your application.
