feat: :sparkles: First attempt to make a connection to endpoint /login

--- a/flutter/app_flutter_cormenai/pubspec.yaml
+++ b/flutter/app_flutter_cormenai/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   postgres: any
   pointycastle: any
+  shelf: any
+  io: any
+  shelf_router: ^1.0.0
   flutter:
     sdk: flutter
     
