--- a/flutter/app_flutter_cormenai/pubspec.yaml
+++ b/flutter/app_flutter_cormenai/pubspec.yaml
@@ -64,6 +64,8 @@ flutter:
 
   assets:
   - assets/images/
+  - assets/fonts/
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
